fixed popup scroll overflow issue. submission detection + pokemon capture now works!! also added small changes to throwPokeball animation

--- a/entrypoints/popup/style.css
+++ b/entrypoints/popup/style.css
@@ -13,7 +13,7 @@
 body {
   background-color: rgb(33, 33, 33);
   width: 300px;
-  max-height: 400px;
+  max-height: 430px;
   overflow-y: scroll;
   color: white;
   font-family: pokemonFont;
@@ -33,16 +33,16 @@ p {
   margin: 0px;
 }
 
-.pokemonList {
+#pokemonList {
   border: solid 1px gray;
   padding: 10px;
   display: grid;
   grid-template-columns: repeat(7, 1fr);
   grid-auto-rows: 40px;
   gap: 2px;
-  max-height: 400px;
-  pointer-events: none;
-  user-select: none;
+  max-height: 350px;
+  overflow-y: scroll;
+  scrollbar-width: none;
 }
 
 .sprite {
@@ -51,4 +51,5 @@ p {
   object-fit: contain;
   justify-self: center;
   align-self: center;
+  user-select: none;
 }
